--- a/index.html
+++ b/index.html
@@ -4,5 +4,9 @@
     <script src="script.js"></script>
     <link rel="stylesheet" type="text/css" href="styles.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="btn">
+      <div class="paly"></div>
+    </div>
+  </body>
 </html>
