--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <script src="script.js"></script>
     <link rel="stylesheet" type="text/css" href="styles.css" />
   </head>
   <body>
     <div class="btn">
-      <div class="paly"></div>
+      <div class="play"></div>
+      <p>Play Video</p>
     </div>
+    <script src="script.js"></script>
   </body>
 </html>
